fixed spacing

--- a/src/App.css
+++ b/src/App.css
@@ -72,6 +72,7 @@
 #submitForm {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 .bottom {
